# rubik

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  cube.f  cubemod.f  makefile  randmod.f  rubik.f  test.sh
.github/workflows/: main.yml
src/: main.f  main.f90  randmod.f  randmod.f90  rubik.f  rubik.f90  textmod.f  textmod.f90
tests/: test-s0.inp  test-s1.inp  test-s2.inp
tests/expected/: test-s0.out  test-s1.out  test-s2.out
